@@ -1,6 +1,13 @@
 package org.pragmatica.aether.api;
 
+import org.pragmatica.aether.slice.kvstore.AetherKey;
+import org.pragmatica.aether.slice.kvstore.AetherValue;
+import org.pragmatica.cluster.node.rabia.RabiaNode;
+import org.pragmatica.cluster.state.kvstore.KVCommand;
+import org.pragmatica.cluster.state.kvstore.KVStore;
 import org.pragmatica.consensus.NodeId;
+import org.pragmatica.lang.Promise;
+import org.pragmatica.lang.Unit;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -13,38 +20,113 @@ import org.slf4j.LoggerFactory;
 /**
  * Manages alert thresholds and tracks active alerts.
  *
- * <p>In-memory only - thresholds reset on node restart.
+ * <p>Thresholds are persisted to consensus KV-Store for cluster-wide consistency
+ * and survival across node restarts.
  */
 public class AlertManager {
     private static final Logger log = LoggerFactory.getLogger(AlertManager.class);
     private static final int MAX_ALERT_HISTORY = 100;
 
+    private final RabiaNode<KVCommand<AetherKey>> clusterNode;
+    private final KVStore<AetherKey, AetherValue> kvStore;
+
     private final Map<String, Threshold> thresholds = new ConcurrentHashMap<>();
     private final Map<String, ActiveAlert> activeAlerts = new ConcurrentHashMap<>();
     private final List<AlertHistoryEntry> alertHistory = new ArrayList<>();
 
-    public AlertManager() {
-        // Default thresholds
-        thresholds.put("cpu.usage", new Threshold(0.7, 0.9));
-        thresholds.put("heap.usage", new Threshold(0.7, 0.85));
+    private AlertManager(RabiaNode<KVCommand<AetherKey>> clusterNode,
+                         KVStore<AetherKey, AetherValue> kvStore) {
+        this.clusterNode = clusterNode;
+        this.kvStore = kvStore;
     }
 
     /**
-     * Set threshold for a metric.
+     * Factory method following JBCT naming convention.
      */
-    public void setThreshold(String metric, double warning, double critical) {
-        thresholds.put(metric, new Threshold(warning, critical));
-        log.info("Threshold set for {}: warning={}, critical={}", metric, warning, critical);
+    public static AlertManager alertManager(RabiaNode<KVCommand<AetherKey>> clusterNode,
+                                            KVStore<AetherKey, AetherValue> kvStore) {
+        var manager = new AlertManager(clusterNode, kvStore);
+        manager.loadThresholdsFromKvStore();
+        manager.ensureDefaultThresholds();
+        return manager;
     }
 
     /**
-     * Remove threshold for a metric.
+     * Load thresholds from KV-Store on startup.
      */
-    public void removeThreshold(String metric) {
-        var removed = thresholds.remove(metric);
-        if (removed != null) {
-            log.info("Threshold removed for {}", metric);
+    private void loadThresholdsFromKvStore() {
+        var snapshot = kvStore.snapshot();
+        for (var entry : snapshot.entrySet()) {
+            if (entry.getKey() instanceof AetherKey.AlertThresholdKey thresholdKey &&
+            entry.getValue() instanceof AetherValue.AlertThresholdValue thresholdValue) {
+                thresholds.put(thresholdKey.metricName(),
+                               new Threshold(thresholdValue.warningThreshold(), thresholdValue.criticalThreshold()));
+                log.debug("Loaded threshold from KV-Store: {} warning={}, critical={}",
+                          thresholdKey.metricName(),
+                          thresholdValue.warningThreshold(),
+                          thresholdValue.criticalThreshold());
+            }
         }
+        log.info("Loaded {} thresholds from KV-Store", thresholds.size());
+    }
+
+    /**
+     * Ensure default thresholds exist if no thresholds were loaded.
+     */
+    private void ensureDefaultThresholds() {
+        if (thresholds.isEmpty()) {
+            // Set defaults in-memory, they will be persisted on first explicit setThreshold call
+            thresholds.put("cpu.usage", new Threshold(0.7, 0.9));
+            thresholds.put("heap.usage", new Threshold(0.7, 0.85));
+            log.info("Initialized default thresholds (in-memory only until explicitly set)");
+        }
+    }
+
+    /**
+     * Set threshold for a metric and persist to KV-Store.
+     *
+     * @return Promise that completes when threshold is persisted across cluster
+     */
+    @SuppressWarnings("unchecked")
+    public Promise<Unit> setThreshold(String metric, double warning, double critical) {
+        var key = AetherKey.AlertThresholdKey.alertThresholdKey(metric);
+        var value = AetherValue.AlertThresholdValue.alertThresholdValue(metric, warning, critical);
+        var command = (KVCommand<AetherKey>)(KVCommand< ? >) new KVCommand.Put<>(key, value);
+        return clusterNode.<Unit> apply(List.of(command))
+               .map(_ -> {
+                        thresholds.put(metric,
+                                       new Threshold(warning, critical));
+                        log.info("Threshold set and persisted for {}: warning={}, critical={}",
+                                 metric,
+                                 warning,
+                                 critical);
+                        return Unit.unit();
+                    })
+               .onFailure(cause -> log.error("Failed to persist threshold for {}: {}",
+                                             metric,
+                                             cause.message()));
+    }
+
+    /**
+     * Remove threshold for a metric and persist removal to KV-Store.
+     *
+     * @return Promise that completes when removal is persisted across cluster
+     */
+    @SuppressWarnings("unchecked")
+    public Promise<Unit> removeThreshold(String metric) {
+        var key = AetherKey.AlertThresholdKey.alertThresholdKey(metric);
+        var command = (KVCommand<AetherKey>)(KVCommand< ? >) new KVCommand.Remove<>(key);
+        return clusterNode.<Unit> apply(List.of(command))
+               .map(_ -> {
+                        var removed = thresholds.remove(metric);
+                        if (removed != null) {
+                        log.info("Threshold removed and persisted for {}", metric);
+                    }
+                        return Unit.unit();
+                    })
+               .onFailure(cause -> log.error("Failed to persist threshold removal for {}: {}",
+                                             metric,
+                                             cause.message()));
     }
 
     /**
@@ -106,6 +188,33 @@ public class AlertManager {
         return null;
     }
 
+    /**
+     * Handle KV-Store update notification for threshold changes from other nodes.
+     *
+     * <p>Called by AetherNode when it receives KV-Store value updates.
+     */
+    public void onKvStoreUpdate(AetherKey key, AetherValue value) {
+        if (key instanceof AetherKey.AlertThresholdKey thresholdKey &&
+        value instanceof AetherValue.AlertThresholdValue thresholdValue) {
+            thresholds.put(thresholdKey.metricName(),
+                           new Threshold(thresholdValue.warningThreshold(), thresholdValue.criticalThreshold()));
+            log.debug("Threshold updated from cluster: {} warning={}, critical={}",
+                      thresholdKey.metricName(),
+                      thresholdValue.warningThreshold(),
+                      thresholdValue.criticalThreshold());
+        }
+    }
+
+    /**
+     * Handle KV-Store remove notification for threshold deletions from other nodes.
+     */
+    public void onKvStoreRemove(AetherKey key) {
+        if (key instanceof AetherKey.AlertThresholdKey thresholdKey) {
+            thresholds.remove(thresholdKey.metricName());
+            log.debug("Threshold removed from cluster: {}", thresholdKey.metricName());
+        }
+    }
+
     private String buildAlertMessage(ActiveAlert alert) {
         return "{\"type\":\"ALERT\",\"timestamp\":" + System.currentTimeMillis() + ",\"data\":{" + "\"metric\":\"" + alert.metric
                + "\"," + "\"nodeId\":\"" + alert.nodeId.id() + "\"," + "\"value\":" + alert.value + ","
@@ -117,7 +226,7 @@ public class AlertManager {
             alertHistory.add(new AlertHistoryEntry(
             System.currentTimeMillis(), metric, nodeId.id(), value, severity, status));
             while (alertHistory.size() > MAX_ALERT_HISTORY) {
-                alertHistory.remove(0);
+                alertHistory.removeFirst();
             }
         }
     }
